event2page: fix url

--- a/events/event.handlebars
+++ b/events/event.handlebars
@@ -30,7 +30,7 @@
         </div>
         <!-- Event name only in phones -->
         <div class="events-table-name show-for-small">
-          <a href="../e/{{slug}}">
+          <a href="../e/{{slug}}/index.html">
             {{name}}
           </a>
         </div>
@@ -38,7 +38,7 @@
       <!-- Event Info -->
       <div class="large-9 columns events-table-info">
         <div class="events-table-name hide-for-small">
-          <a href="../e/{{slug}}">
+          <a href="../e/{{slug}}/index.html">
             {{name}}
           </a>
         </div>
@@ -67,7 +67,7 @@
             Owner
           </span>
           <br>
-          <a href="../u/{{owner.display_name}}/">
+          <a href="../u/{{owner.display_name}}/index.html">
             {{owner.first_name}} {{owner.last_name}}
           </a>
 
